# NeuroRM-v1.0

./: CMakeLists.txt  README.en.md  README.md  main.cpp
detector/include/: inference.h
detector/src/: inference.cpp
model/: yolox11.onnx
